# aruco-interface

./: CMakeLists.txt  README.md  aruco_example  out_camera_vreo.xml  relocalize_aruco.cpp  relocalize_aruco.h  relocalize_aruco_example.cpp  vreocam_parameters.yml  vreocam_parameters2.yml
